# compiled-rust-benchmarking

./: .gitignore  .pmat-gates.toml  COMPLETE_PROJECT_SUMMARY.md  Cargo.toml  EXECUTION_GUIDE.md  FINAL_PROJECT_STATUS.md  FINAL_SESSION_SUMMARY.md  FULL_PATHFINDER_RESULTS.md  INTEGRATION.md  MULTI_BENCHMARK_RESULTS.md  Makefile  PATHFINDER_RESULTS.md  PHASE_4_DESIGN.md  PHASE_4_SUMMARY.md  PROJECT_STATUS.md  README.md  SESSION_COMPLETION_SUMMARY.md  VISUALIZATION_GUIDE.md  analyze_speedups.py  binary_sizes_fibonacci.json  export_visualization_data.py  generate_visualizations.py  heatmap_data.csv  measure_binary_sizes.py  measure_representative_sizes.sh  pareto_frontier.csv  pathfinder_results.json  pmat-quality.toml  profile_rankings.csv  rust-toolchain.toml  text_visualizations.py  visualizations_README.txt  workload_comparison.csv
.pmat/: quality-debt.toml  tdg-baseline.json
benchmarks/ackermann/: Cargo.toml
benchmarks/ackermann/src/: main.rs
benchmarks/btreemap-ops/: Cargo.toml
benchmarks/btreemap-ops/src/: main.rs
benchmarks/fibonacci/: Cargo.toml
benchmarks/fibonacci/src/: main.rs
benchmarks/file-io/: Cargo.toml
benchmarks/file-io/src/: main.rs
benchmarks/hashmap-ops/: Cargo.toml
benchmarks/hashmap-ops/src/: main.rs
benchmarks/json-parse/: Cargo.toml
benchmarks/json-parse/src/: main.rs
benchmarks/matrix-mult/: Cargo.toml
benchmarks/matrix-mult/src/: main.rs
benchmarks/prime-sieve/: Cargo.toml
benchmarks/prime-sieve/src/: main.rs
benchmarks/quicksort/: Cargo.toml
benchmarks/quicksort/src/: main.rs
benchmarks/string-parse/: Cargo.toml
benchmarks/string-parse/src/: main.rs
benchmarks/trueno-simd/: Cargo.toml
benchmarks/trueno-simd/src/: main.rs
configs/: balanced-perf.toml  balanced-size.toml  baseline.toml  cg1-native.toml  cg1-opt2.toml  cg1-opt3.toml  cg1-strip.toml  cg16-native.toml  cg16-opt2.toml  cg16-opt3.toml  cg16-strip.toml  cg4-native.toml  cg4-opt2.toml  cg4-opt3.toml  codegen-1.toml  codegen-256.toml  codegen-4.toml  cpu-native-cg1.toml  cpu-native-cg4.toml  cpu-native-opt2.toml  cpu-native-opt3.toml  cpu-native.toml  cpu-specific-opt2.toml  cpu-specific-opt3.toml  cpu-specific.toml  default-dev.toml  fast-compile.toml  lto-fat-cg1.toml  lto-fat-cg4.toml  lto-fat-opt2.toml  lto-fat-opt3.toml  lto-fat.toml  lto-thin-cg1.toml  lto-thin-cg4.toml  lto-thin-opt2.toml  lto-thin-opt3.toml  lto-thin.toml  max-opt.toml  min-opt.toml  opt-0.toml  (+40 more)
crates/analysis/: Cargo.toml
crates/analysis/src/: basic.rs  frequentist.rs  lib.rs
crates/harness/: Cargo.toml
crates/harness/src/: build_matrix.rs  config.rs  lib.rs  measurement.rs  pathfinder.rs  scheduler.rs
crates/harness/src/config/: generator.rs
crates/stats/: Cargo.toml
crates/stats/src/: lib.rs
docs/specifications/: PEER_REVIEW_CHANGELOG.md  compiled-binary-rust-size-speedup-benchmarking-spec.md
